# otus-hw

./: .gitignore  README.md
1. ip filter/: CMakeLists.txt  README.md
1. ip filter/src/: main.cpp  test.cpp
2. ip filter range/: CMakeLists.txt  README.md
2. ip filter range/src/: main.cpp  test.cpp
